--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>My DSA Tracker</h1>
+  <h1>SDE Sheet</h1>
   <div class="top-controls">
     <input type="text" id="searchInput" placeholder="Search problems..." oninput="updateSearchSuggestions()" />
     <div id="searchSuggestions" class="suggestions hidden"></div>
